# pyschemic

pyschemia-crypto/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pyschemia-crypto/.github/workflows/: ci.yml  release.yml
pyschemia-crypto/pyschemia_crypto/: __init__.py
pyschemia-crypto/pyschemia_crypto/common/: __init__.py  audit.py  automaton.py  normalize.py
pyschemia-crypto/pyschemia_crypto/experimental/: __init__.py
pyschemia-crypto/pyschemia_crypto/experimental/rsa_4096/: __init__.py
pyschemia-crypto/pyschemia_crypto/legacy/: __init__.py
pyschemia-crypto/pyschemia_crypto/legacy/rsa_2048/: config.py  pattern.py
pyschemia-crypto/pyschemia_crypto/stable/: __init__.py
pyschemia-crypto/pyschemia_crypto/stable/rsa_3072/: config.py  pattern.py
pyschemia-crypto/pyschemia_crypto/tests/: __init__.py  test_normalization.py  test_patterns.py
